--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div id="button-goes-here"></div>
-
+    <br>
+    <div id="gifs-appear-here"></div>
     <div id="input-field"></div>
 
     <div id="input-button"></div>
