--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 
 
 
-  <script src="./assets/javascript/app.js"></script>  
+  <script src="./assets/javascript/app.js" type="text/javascript"></script>  
 </body>
 </html>
