--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,18 +11,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Giphy-widget</title>
 </head>
+
 <body>
-    <div id="button-goes-here"></div>
-    <br>
-    <div id="gifs-appear-here"></div>
-    <div id="input-field"></div>
+    <header class="jumbotron text-center">
+        <h1 class="display-3">The Mighty GIF-Grabber</h1>
+        <br>
+        <p class="lead">Click a button to get some gifs! Make a new button to find new gifs!</p>
+    </header>
 
-    <div id="input-button"></div>
-    
+    <section class="container">
+
+        <div id="button-goes-here"></div>
+        <br>
+        <div id="gifs-appear-here"></div>
+        <div id="input-field"></div>
+
+        <div id="input-button"></div>
+    </section>
 
 
 
 
-  <script src="./assets/javascript/app.js" type="text/javascript"></script>  
+
+    <script src="./assets/javascript/app.js" type="text/javascript"></script>
 </body>
+
 </html>
