--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div id="button-goes-here"></div>
         <br>
-        <div id="gifs-appear-here"></div>
+        <div id="gifs-appear-here" class="card-deck container bg-secondary"></div>
         <div id="input-field"></div>
 
         <div id="input-button"></div>
