added article section and move some lines into it to better accomodate the input button and field when added

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
         <div id="button-goes-here"></div>
         <br>
         <div id="gifs-appear-here" class="card-deck container bg-secondary"></div>
+    </section>
+
+    <article>
         <div id="input-field"></div>
 
         <div id="input-button"></div>
-    </section>
 
+    </article>
 
 
 
