removed extra spacing. corrected a spelling error

--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <section class="container">
         <form role="form">
             <button type="button" class="btn btn-secondary" id="create-new-button">Create New Button</button>
-            <input class="form-control m-1 text-muted" id="new-button" type="text" value="Enter new button here!">
+            <input class="form-control m-1" id="new-button" type="text">
         </form>
     </section>
 
     <section class="container">
-
         <div id="button-goes-here"></div>
         <br>
         <div id="gifs-appear-here" class="card-deck container bg-secondary"></div>
