added a remove last button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <section class="container">
         <form role="form">
             <button type="button" class="btn btn-secondary" id="create-new-button">Create New Button</button>
+            <button type="button" class="btn btn-secondary" id="remove-button">Remove Button</button>
             <input class="form-control m-1" id="new-button" type="text">
         </form>
     </section>
